Fixig some of the alignment issue on the home page, and also adding architecture diagram to read me

--- a/css/shop-homepage.css
+++ b/css/shop-homepage.css
@@ -22,18 +22,18 @@
     height: 300px;
 }
 .search {
-    width: 330px;
+    width: 350px;
     height: 30px;
     margin-bottom: 60px;
     margin-top: 4%;
-    margin-left: 39%;
+    margin-left: 35%;
 }
 
 .category {
-    width: 210px;
+    width: 218px;
     height: 40px;
     margin-bottom: 60px;
-    margin-left: 42%;
+    margin-left: 39%;
 }
 
 @media (min-width: 768px) {
