--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -41,8 +41,8 @@
 }
 #heading {
     text-indent: 20px;
-    line-height: 14px;
-    font-size: 20px;
+    line-height: 15px;
+    font-size: 18px;
 }
 
 #compare {
